# text-editor

./: .editorconfig  .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: buffer.rs  command.rs  input.rs  line.rs  main.rs  model.rs  prompt.rs  rope.rs  tab.rs  terminal.rs  ui.rs
