# Copyright 2025 Ryan Van Why
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "text-editor"
authors = ["Ryan Van Why <jrvanwhy@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "text-editors"]
description = """My personal text editor. Supports editing space-indented \
                 as if they are tab-indented."""
edition = "2024"
keywords = ["editor"]
license = "Apache-2.0"
# If I ever publish this to crates.io, I need to rename it (it probably should
# include my username).
publish = false
repository = "https://github.com/jrvanwhy/text-editor"

[dependencies.ratatui]
default-features = false
features = ["crossterm"]
# TODO: When updated beyond 0.29.0, check if "layout-cache" has been enabled.
version = "0.29.0"
